components/spring-boot-demo2/istio-configs.yaml
---
# Source: spring-boot-demo2/templates/istio-configs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-demo2
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
      - spring-boot-demo2-istio-ingress.apps.cluster-nbhrp.dynamic.redhatworkshops.io
    tls:
      mode: SIMPLE
      credentialName: spring-boot-demo2-cert
...
---
# Source: spring-boot-demo2/templates/istio-configs.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-boot-demo2
  namespace: istio-ingress
spec:
  host: spring-boot-demo2-istio-ingress.apps.cluster-nbhrp.dynamic.redhatworkshops.io
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...

---
# Source: spring-boot-demo2/templates/istio-configs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-demo2
  namespace: spring-boot-demo2
spec:
  gateways:
  - istio-ingress/spring-boot-demo2
  # - istio-ingress3/spring-boot-demo2
  hosts:
  - spring-boot-demo2-istio-ingress.apps.cluster-nbhrp.dynamic.redhatworkshops.io
  # - spring-boot-demo2-istio-ingress3.apps.cluster-nbhrp.dynamic.redhatworkshops.io
  http:
  - route:
    - destination:
        host: spring-boot-demo2.spring-boot-demo2.svc.cluster.local
        port:
          number: 8080
...
# TODO not needed if both control planes can discover the same namespace. both CPs need to be disabled to inject in that namespace and use the same root CA.
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: ServiceEntry
# metadata:
#   name: spring-boot-demo2
#   namespace: istio-ingress
# spec:
#   hosts:
#   - spring-boot-demo2.spring-boot-demo2.svc.cluster.local
#   location: MESH_EXTERNAL
#   ports:
#   - number: 8080
#     name: http
#     protocol: HTTP
#   - number: 9977
#     name: cryostat-agent
#     protocol: TCP
#   resolution: DNS
# ...
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-for-spring-boot-demo2
  namespace: spring-boot-demo2
spec:
  host: spring-boot-demo2.spring-boot-demo2.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
...
